Fix socat interface binding issue for multicast receiver

--- a/multicast-receiver.yaml
+++ b/multicast-receiver.yaml
@@ -38,13 +38,14 @@ data:
     # Listen for JBoss JGroups cluster messages
     MULTICAST_ADDR="${MULTICAST_ADDR:-224.0.1.105}"
     MULTICAST_PORT="${MULTICAST_PORT:-45688}"
-    
+    # Get the primary interface IP
+    LOCAL_IP=$(ip -4 addr show eth0 2>/dev/null | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | head -1)
+    [ -z "$LOCAL_IP" ] && LOCAL_IP=$(hostname -i 2>/dev/null | awk '{print $1}')
+    [ -z "$LOCAL_IP" ] && LOCAL_IP="0.0.0.0"
     echo "Starting JBoss-style multicast receiver..."
-    echo "Listening on: $MULTICAST_ADDR:$MULTICAST_PORT"
+    echo "Listening on: $MULTICAST_ADDR:$MULTICAST_PORT (interface: $LOCAL_IP)"
     echo "Waiting for messages..."
-    echo ""
-    
-    socat UDP4-RECVFROM:${MULTICAST_PORT},ip-add-membership=${MULTICAST_ADDR}:0.0.0.0,fork \
+    socat -u UDP4-RECVFROM:${MULTICAST_PORT},ip-add-membership=${MULTICAST_ADDR}:${LOCAL_IP},reuseaddr,fork \
       SYSTEM:'echo "[$(date -Iseconds)] Received:" && cat && echo ""'
   
   listen-raw.sh: |
@@ -52,9 +53,11 @@ data:
     # Simple raw listener
     MULTICAST_ADDR="${1:-224.0.1.105}"
     MULTICAST_PORT="${2:-45688}"
-    
-    echo "Listening on $MULTICAST_ADDR:$MULTICAST_PORT..."
-    socat UDP4-RECVFROM:${MULTICAST_PORT},ip-add-membership=${MULTICAST_ADDR}:0.0.0.0,fork -
+    LOCAL_IP=$(ip -4 addr show eth0 2>/dev/null | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | head -1)
+    [ -z "$LOCAL_IP" ] && LOCAL_IP=$(hostname -i 2>/dev/null | awk '{print $1}')
+    [ -z "$LOCAL_IP" ] && LOCAL_IP="0.0.0.0"
+    echo "Listening on $MULTICAST_ADDR:$MULTICAST_PORT (interface: $LOCAL_IP)..."
+    socat -u UDP4-RECVFROM:${MULTICAST_PORT},ip-add-membership=${MULTICAST_ADDR}:${LOCAL_IP},reuseaddr,fork -
   
   tcpdump-multicast.sh: |
     #!/bin/bash
