--- a/receiver/Dockerfile
+++ b/receiver/Dockerfile
@@ -5,7 +5,8 @@ LABEL org.opencontainers.image.description="Multicast receiver for JBoss/JGroups
 LABEL org.opencontainers.image.licenses="MIT"
 
 # Install required packages
-# Note: Using Python for multicast receiving due to socat 1.8.x bug with ip-add-membership
+# - Python for basic multicast receiving (socat 1.8.x has ip-add-membership bug)
+# - Java for JGroups protocol testing
 RUN apk add --no-cache \
     python3 \
     socat \
@@ -13,7 +14,15 @@ RUN apk add --no-cache \
     iputils \
     bash \
     tcpdump \
+    openjdk17-jre-headless \
+    curl \
     && rm -rf /var/cache/apk/*
+
+# Download JGroups JAR
+ENV JGROUPS_VERSION=5.3.1.Final
+RUN mkdir -p /opt/jgroups && \
+    curl -sL "https://repo1.maven.org/maven2/org/jgroups/jgroups/${JGROUPS_VERSION}/jgroups-${JGROUPS_VERSION}.jar" \
+    -o /opt/jgroups/jgroups.jar
 
 # Copy scripts
 COPY scripts/ /opt/multicast/
@@ -27,10 +36,10 @@ WORKDIR /opt/multicast
 # Default environment variables
 ENV MULTICAST_ADDR=224.0.1.105
 ENV MULTICAST_PORT=45688
+ENV JGROUPS_JAR=/opt/jgroups/jgroups.jar
 
 # Entrypoint script
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
-
